chore: add workspace and workspace resource models
