# pkg/api/openapi/model__api_v1_organizations__org_id__workspace_storages__id__volumes_get_200_response.go
@@ -1,0 +1,113 @@
+/*
+stackdome-api-server
+
+stackdome-api-server
+
+API version: 0.0.1
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// ApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response struct for ApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response
+type ApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response struct {
+	Items []Volume `json:"items,omitempty"`
+}
+
+// NewApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response instantiates a new ApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response() *ApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response {
+	this := ApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response{}
+	return &this
+}
+
+// NewApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200ResponseWithDefaults instantiates a new ApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200ResponseWithDefaults() *ApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response {
+	this := ApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response{}
+	return &this
+}
+
+// GetItems returns the Items field value if set, zero value otherwise.
+func (o *ApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response) GetItems() []Volume {
+	if o == nil || o.Items == nil {
+		var ret []Volume
+		return ret
+	}
+	return o.Items
+}
+
+// GetItemsOk returns a tuple with the Items field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *ApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response) GetItemsOk() ([]Volume, bool) {
+	if o == nil || o.Items == nil {
+		return nil, false
+	}
+	return o.Items, true
+}
+
+// HasItems returns a boolean if a field has been set.
+func (o *ApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response) HasItems() bool {
+	if o != nil && o.Items != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetItems gets a reference to the given []Volume and assigns it to the Items field.
+func (o *ApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response) SetItems(v []Volume) {
+	o.Items = v
+}
+
+func (o ApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response) MarshalJSON() ([]byte, error) {
+	toSerialize := map[string]interface{}{}
+	if o.Items != nil {
+		toSerialize["items"] = o.Items
+	}
+	return json.Marshal(toSerialize)
+}
+
+type NullableApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response struct {
+	value *ApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response
+	isSet bool
+}
+
+func (v NullableApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response) Get() *ApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response {
+	return v.value
+}
+
+func (v *NullableApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response) Set(val *ApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response(val *ApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response) *NullableApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response {
+	return &NullableApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response{value: val, isSet: true}
+}
+
+func (v NullableApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableApiV1OrganizationsOrgIdWorkspaceStoragesIdVolumesGet200Response) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
